<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hangman</string>
    <string name="action_settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="currentLang">English</string>
    <string name="dialogAvsluttApp">Do you want to quit Hangman Deluxe?</string>
    <string name="start_game">Start game</string>
    <string name="statistikk">Game statistics</string>
    <string name="regler">Rules</string>
    <string name="avslutt">Quit</string>
    <string name="riktig">Correct</string>
    <string name="feil">Wrong</string>
    <string name="ord">Word: </string>
    <string name="antallspill">Games played</string>
    <string name="vunnet">Won</string>
    <string name="hadet">Good bye!</string>
    <string name="tapt">Lost</string>
    <string name="beklager">Sorry</string>
    <string name="beklagertekst">You did not find the word. The word was: </string>
    <string name="beklagertekst2">Do you want to try again?</string>
    <string name="antallord">Words guessed</string>
    <string name="tilbake">Back</string>
    <string name="tilbakestillstat">Tip: Bad results? You can reset game statistics by clicking the highscore field on the top of the main menu screen.</string>
    <string name="tilbakestill">Reset</string>
    <string name="tilbakestillDialogTekst">Are you sure you want to reset your stats? All your game statistics will be lost.</string>
    <string name="sprak">Choose language</string>
    <string name="title">Hangman</string>
    <string name="dialogAvslutt">Are you sure you want to quit?</string>
    <string name="dialogAvsluttTittel">Quit?</string>
    <string name="dialogAvsluttSpill">Are you sure you want to quit this round and return to the main menu? It will count as a loss in the game stati.</string>
    <string name="rules"> Welcome to Hangman Deluxe! When a new game begins, a new random word is generated. Your goal is to find out what the word is. To do so, you will have to guess what characters the word consists of. \n \n Click a character to guess. You only got 8 chances, so pick carefully. </string> 
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
	<string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
	<string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
	<string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="velglang">Choose language</string>


</resources>
